2023-09-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* etc/hacking.org (Maintainers): Update.
	* HACKING: Regenerate.

2023-09-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* configure.ac (AC_CONFIG_FILES): Add `pokefmt/Makefile'.
	* Makefile.am (SUBDIRS): Add `pokefmt'.
	* pokefmt/pokefmt.l: New template system to embed Poke code in docs,
	tests, etc.
	* pokefmt/pokefmt.pk: Poke support code for `pokefmt' app.
	* pokefmt/Makefile.am: New file.
	* run.in (POKEFMTAPPDIR): New variable.
	* poke.pokefmt/pokefmt.exp: New tests.
	* testsuite/Makefile.am (check-DEJAGNU): Add `POKEFMTAPPDIR' env var.
	(EXTRA_DIST): Update.
	* doc/poke.texi (pokefmt): Add new chapter.

2023-09-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Accept t and T suffix for uint<1> values.
	* libpoke/pkl-rt.pk: Adapt values printer accordingly.
	* testsuite/poke.pkl/integers-13.pk: New test.
	* testsuite/poke.pkl/integers-14.pk: Likewise.
	* testsuite/poke.pkl/integers-15.pk: Likewise.
	* testsuite/poke.pkl/integers-16.pk: Likewise.
	* testsuite/poke.map/ass-map-19.pk: Update test accordingly.
	* testsuite/poke.map/maps-int-structs-11.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-6.pk: Likewise.
	* testsuite/poke.map/maps-int-union-3.pk: Likewise.
	* testsuite/poke.map/maps-int-union-4.pk: Likewise.
	* testsuite/poke.map/maps-int-union-5.pk: Likewise.
	* testsuite/poke.pkl/bconc-lvalue-6.pk: Likewise.
	* testsuite/poke.pkl/cast-integers-12.pk: Likewise.
	* testsuite/poke.pkl/cast-integers-8.pk: Likewise.
	* testsuite/poke.pkl/printf-value-15.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* doc/poke.texi (Integer Literals): Document suffixes for bit
	integer literals.

2023-09-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-diff.pk: Refer to default values of configuration
	variables in doc strings as to hold the value "initially" rather
	than "currently".

2023-09-16  Jose E. Marchesi  <jose.marchesi@oracle.com>
