@@ -1,3 +1,10 @@
+2023-09-25  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/libpoke.c (pk_compiler_new_with_flags): Add checks for
+	presence of user-provided function pointers for the terminal
+	interface.
+	* testsuite/poke.libpoke/api.c (test_pk_compiler_new): Update tests.
+
 2023-09-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* etc/hacking.org (Maintainers): Update.
